=== master

* Fix race condition in threaded/sharded_threaded connection pools that could cause stalls (jeremyevans)

* Emulate dropping a unique column or a column that is part of an index on SQLite 3.35.0+ (jeremyevans) (#2176)

* Support MERGE RETURNING on PostgreSQL 17+ (jeremyevans)

* Remove use of logger library in bin/sequel (jeremyevans)

* Support :connect_opts_proc Database option for late binding options (jeremyevans) (#2164)

=== 5.81.0 (2024-06-01)

* Fix ignored block warnings in a couple plugin apply methods on Ruby 3.4 (jeremyevans)

* Skip Ruby internal caller locations when searching for caller locations in caller_logging and provenance extensions (jeremyevans) 

* Add temporarily_release_connection Database extension for multithreaded transactional testing (jeremyevans)

=== 5.80.0 (2024-05-01)

* Support Dataset#skip_locked on MariaDB 10.6+ (simi) (#2150)

* Avoid allocating datasets in cases where the returned dataset would be the same as the receiver (jeremyevans)

* Add provenance dataset extension, which includes comments in queries showing how and where the dataset was built (jeremyevans)

=== 5.79.0 (2024-04-01)

* Support create_or_replace_view with :materialized option on PostgreSQL (nashby) (#2144)

* Support :unlogged_tables_default Database option on Postgres for making created tables unlogged by default (jeremyevans) (#2134)

* Add Dataset#select_prepend for prepending to the current selected columns (jeremyevans) (#2139)

=== 5.78.0 (2024-03-01)

* Support SQLite 3.45+ jsonb functions in the sqlite_json_ops extension (jeremyevans) (#2133)

* Support compounds (e.g. UNION) in conjunction with Database#values on PostgreSQL (jeremyevans) (#2137)

* Support :use_advisory_lock option to Migrator.run to use advisory locks when running migrations (jeremyevans) (#2089)

* Support Database#with_advisory_lock on PostgreSQL, MySQL, and Microsoft SQL Server (jeremyevans) (#2089)

=== 5.77.0 (2024-02-01)
